# polyrhythms

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  requirements-lint.txt
.github/workflows/: ci.yaml
polyrhythms/: __init__.py  _player.py  _polyrhythm.py  _polyrhythms.py  _tone.py  cli.py  polyrhythms.py  settings.py
polyrhythms/streamlit/: app.py
tests/: test_dummy.py  test_polyrhythm.py  test_tone.py
