[project]
name = "polyrhythms"
dynamic = ["version"]
description = "Training tool to learn polyrhythms"
readme = "README.md"
# requires-python = ">=3.7"  # TODO
license = {file = "LICENSE.txt"}
authors = [{name = "Richard Harris"}]
maintainers = [{name = "Richard Harris"}]

dependencies = [
    "numpy",
    "sounddevice >= 0.4.6, <0.5.0",
]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["polyrhythms"]
package-data = {}

[tool.setuptools_scm]
version_file = "polyrhythms/_version.py"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
warn_unused_configs = true